--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.2.2",
     "appwrite": "^13.0.2",
     "react": "^18.2.0",
