--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.2.2",
     "appwrite": "^13.0.2",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
