--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@paypal/react-paypal-js": "^8.2.0",
     "@reduxjs/toolkit": "^2.2.2",
+    "@tanstack/react-table": "^8.19.3",
     "appwrite": "^13.0.2",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
